# ArduinoBluetoothInterface

./: fix_arduino_permissions.sh
api_interface/python/v1/: api_interface.py  test_api_interface.py
bluetooth_interface/: arduino_interface.cpp  arduino_interface.h  bluetooth_interface.ino  function.h  helper.cpp  helper.h  host_interface.h  project_interface.cpp  project_interface.h  ref.h  unique_ptr.h  vector.h  void_callback.h
bluetooth_interface/backup/: UUIDGenerator.cpp  UUIDGenerator.h  random.h  subscription.h
components/dequeuer/: Dockerfile  docker_build.sh  docker_run.sh  requirements.txt
components/dequeuer/app/: dequeuer.py  (+2 more)
components/esp32/: esp32_processor_factory.py  main.py  module.py  requirements.txt  transmission_parser.py
components/wifi_server/: requirements.txt
devices/test_device/: setup.cfg
devices/test_device/src/test_device_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt
esp32/: requirements.txt  socket_client_factory.py
esptool/: requirements.txt
esptool/scripts/: backup_flash_memory.py  get_esp_directory_listing.py  get_flash_info.py  install_project.py  restore_flash_memory.py
frameworks/python/v1/: setup.cfg
frameworks/python/v1/src/: socket_client_factory.py
frameworks/python/v1/src/austin_heller_repo/: api_interface.py  socket_client_factory.py
frameworks/python/v1/src/device_messaging_system_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt
frameworks/python/v1/tests/: test_api_interface.py  test_socket_client_factory.py
tools/esptool/: requirements.txt
wifi_server/: Dockerfile  docker_build.sh  docker_run.sh  requirements.txt
wifi_server/app/: database.py  main.py
wifi_server/app_test/: :memory:;foreign keys=true;  test_database.py  test_main.py  tests.py
(+22 files in other folders)
