[metadata]
name = test-device-austinhellerrepo
version = 0.0.1
author = Austin Heller
description = A test device for the ModuleLoader class to load
url = https://github.com/AustinHellerRepo/DeviceMessagingSystem#subdirectory=devices/test_device
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
