[metadata]
name = device-messaging-system-austinhellerrepo
version = 0.0.6
author = Austin Heller
description = A basic package containing shared functionality
url = https://github.com/AustinHellerRepo/DeviceMessagingSystem#subdirectory=framework/python/v1
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
